--- a/index.html
+++ b/index.html
@@ -14,14 +14,7 @@
   <body>
     <div class="row min-vh-100 no-gutters">
       <header
-        class="
-          col-12 col-lg-3
-          bg-dark
-          text-light
-          d-flex
-          flex-column
-          p-4 p-lg-3
-        ">
+        class="col-12 col-lg-3 bg-dark text-light d-flex flex-column p-4 p-lg-3">
         <h1 class="text-center">Taskmaster Pro Edition</h1>
         <button
           id="create-task"
@@ -41,9 +34,59 @@
         </p>
       </header>
       <main class="col-12 col-lg-9">
-        <div class="m-5">
-          <h2>To Do</h2>
-          <ul id="list-toDo" class="list-group"></ul>
+        <div class="m-5 row justify-content-around">
+          <!-- To Do Start -->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header">To Do</h4>
+              <ul id="list-toDo" class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <span class="badge badge-primary badge-pill">01/14/2022</span>
+                  <p class="m-1">Sample task to do</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- To Do End -->
+          <!-- In Progress Start -->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header">In Progress</h4>
+              <ul id="list-inProgress" class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <span class="badge badge-primary badge-pill">01/15/2022</span>
+                  <p class="m-1">Sample task in progress</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- In Progress End -->
+          <!-- In Review Start -->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header">In Review</h4>
+              <ul id="list-inReview" class="list-group list-group-flush">
+                <li class="list-group-item">
+                  <span class="badge badge-primary badge-pill">01/16/2022</span>
+                  <p class="m-1">Sample task that's in review</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- In Review End -->
+          <!-- Done Start -->
+          <div class="col-12 col-md-6 col-xl-3 mb-3">
+            <div class="card">
+              <h4 class="card-header">Done</h4>
+              <ul id="list-done" class="list-group list-group-flush">
+                <list class="list-group-item">
+                  <span class="badge badge-primary badge-pill">01/01/2022</span>
+                  <p class="m-1">Sample task that's done</p>
+                </list>
+              </ul>
+            </div>
+          </div>
+          <!-- Done End -->
         </div>
       </main>
     </div>
@@ -68,22 +111,29 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
+
           <div class="modal-body">
             <form>
               <div class="form-group">
                 <label for="modalTaskDescription">Task description</label>
-                <textarea id="modalTaskDescription" rows="3"></textarea>
+                <textarea
+                  id="modalTaskDescription"
+                  rows="3"
+                  class="form-control"></textarea>
               </div>
+
               <div class="form-group">
                 <label for="modalDueDate">Due date</label>
                 <input
                   type="text"
+                  class="form-control"
                   id="modalDueDate"
                   placeholder="mm/dd/yyyy"
                   autocomplete="off" />
               </div>
             </form>
           </div>
+
           <div class="modal-footer">
             <button
               type="button"
