--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <h1 class="text-center">Taskmaster Pro Edition</h1>
         <button
           id="create-task"
-          class="btn btn-block btn-success"
+          class="btn btn-block btn-add"
           data-toggle="modal"
           data-target="#task-form-modal">
           <span class="oi oi-plus mr-2"></span> Add Task
         </button>
-        <button id="remove-tasks" class="btn btn-block btn-danger">
+        <button id="remove-tasks" class="btn btn-block btn-delete">
           <span class="oi oi-trash mr-2"></span>Delete All Tasks
         </button>
         <span
@@ -82,8 +82,8 @@
           <!-- Done End -->
         </div>
         <!-- Trash -->
-        <div id="trash" class="mt-auto">
-          <div class="w-100 bg-danger p-3 text-center text-light display-4">
+        <div id="trash" class="mt-auto overflow-hidden">
+          <div class="w-100 p-3 text-center bottom-trash">
             <span class="oi oi-trash mr-2"></span>Drop Here to Remove.
           </div>
         </div>
@@ -140,7 +140,7 @@
               data-dismiss="modal">
               Close
             </button>
-            <button type="button" class="btn btn-primary">Save Task</button>
+            <button type="button" class="btn btn-save">Save Task</button>
           </div>
         </div>
       </div>
